Revision history for perl distribution Convos

6.55 Not Released
 - Bumped required Perl to 5.20
 - Changed to async/await
 - Replaced backend.user helper to user.load_p
 - Brought back Convos::Plugin::Paste to simplify overriding multiline message handling
 - Fix not hiding the sidebar settings when scrolling up #689
 - Going to ignore pull requests from "dependabot" in Convos::Plugin::Bot::Action::Github

6.54 2022-01-07T19:16:00+0900
 - Updated representation of IRC colors

6.53 2022-01-05T21:55:00+0900
 - Fix not "eating" characters after resetting IRC colors #665
 - Fix not translating private messages
 - Add support for overriding IRC colors in the theme

6.52 2022-01-04T08:16:00+0900
 - Fix not translating "" - the .po header
 - Fix security issue for svg with Content-Disposition header
   Contributor: KhanhCM
   Reference: https://huntr.dev/bounties/66e7c30a-ce03-4272-aa87-62abb803ea80/

6.51 2022-01-02T08:55:00+0900
 - Fix GET /api/files when there are no files

6.50 2021-12-31T17:59:00+0900
 - Safari does not support look-behind

6.49 2021-12-31T16:43:00+0900
 - Fix XSS vulnerability in links
   Contributor: Pocas
   Reference: https://huntr.dev/bounties/4532a0ac-4e7c-4fcf-9fe3-630e132325c0
 - Add EXPERIMENTAL support for IRC color and text formatting #281 #600
 - Changed to hiding "https://" from generated links, but keep "http://"
 - Changed I18N.md() to be understand recursive tags #601
 - Updated Italian translation #654
   Contributor: SerHack
 - Replaced CONVOS_DEBUG=1 with CONVOS_LOG_LEVEL=trace

6.48 2021-12-29T19:40:00+0900
 - Fix catching invalid nick change #628
 - Fix showing tooltips on desktop
 - Add notification sound #589
   Contributor: egomassive
   Reference: https://freesound.org/people/egomassive/sounds/536748/
 - Add more rules for files with Content-Disposition
   Contributor: Pocas
   Reference: https://huntr.dev/bounties/ae424798-de01-4972-b73b-2db674f82368/

6.47 2021-12-28T12:32:00+0900